[package]
name = "pitufo"
version = "1.0.0"
authors = ["ian-hamlin <ian@ihamlin.co.uk>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A small application that will walk the given path and replace the content of every json file found.  The file will either be prettified or minified."
repository = "https://github.com/ian-hamlin/pitufo"
documentation = "https://github.com/ian-hamlin/pitufo"
homepage = "https://ian-hamlin.github.io/pitufo/"
keywords = ["json", "prettify", "minify"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
serde_json = "1.0"
argh = "0.1.3"